# SKBD

./: README.md  capture-key.ui  capture-key.vala  event.vala  jack-adapter.vala  jack.vapi  jimbo.vala  keyboard.vala  meson.build  midithing.vala  settings.ui  settings.vala  skbd.gresources.xml
